/*
 * $Id: ChangeLog,v 1.2386 2004/02/24 03:10:23 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-23 19:14 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed reversed arguments for :Keys() and :Values() pseudo methods of Hash.
    % Optimized out HB_ITEM, byt using &(HB_VM_STACK.Return) directly as the receiver.

  * source/vm/proc.c
    ! Fixed GPF trap, when Object Method is not a valid Method for that class.

  * tests/pp.prg
  * tests/pp_harb.ch
    * Few revisions and minor fixes.

  * tests/prgscrpt.prg
    * Revised to reflect latest.

2004-02-23 03:05 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * doc/howtoext.txt
     ! Fixed some typos

2004-02-24 02:55 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * include/hbapiitm.h
  * source/vm/itemapi.c
  * contrib/hbzlib/zip.c
    * reverted introduction of hb_itemParamStack() function since it is
      against common programming concept when dealing with structure and
      is a definitive GPF trap.

2004-02-23 01:45 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * doc/howtoext.txt
     + Added Section 1, 9 - 11
     ! Fixed some typos

2004-02-23 22:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * contrib/winprn/tprint.prg
    ! fix memory leaks.

2004-02-23 20:05 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rdd/dbcmd.c
    ! fix memory leaks on non Borland compiler

2004-02-23 17:05 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/descend.c
  * source/rtl/datec.c
  * source/rtl/dateshb.c
  * source/rtl/memofile.c
  * source/rtl/minmax.c
  * source/rtl/mtran.c
  * source/rtl/gx.c
  * source/rtl/hardcr.c
  * source/rtl/gtcgi/cgiread.c
  * source/rdd/workarea.c
  * source/rdd/dbfdbt/dbfdbt1.c
  * source/rdd/dbfcdx/dbfcdx1.c
  * source/vm/itemapi.c
  * source/vm/estack.c
  * source/vm/errorapi.c